Fix course image alignment in coupon view

--- a/ecommerce/static/sass/partials/views/_coupon_offer.scss
+++ b/ecommerce/static/sass/partials/views/_coupon_offer.scss
@@ -203,9 +203,7 @@
                     line-height: 1.2;
                 }
                 .image-container {
-                    display: flex;
-                    flex-direction: column-reverse;
-                    height: 150px;
+                    position: relative;
                 }
             }
         }
